# resource_retriever-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
ardent/libcurl_vendor/: package.xml
debian/: changelog  control  copyright  gbp.conf  rules
include/resource_retriever/: memory_resource.hpp  resource.hpp  retriever.hpp
include/resource_retriever/plugins/: filesystem_retriever.hpp  retriever_plugin.hpp
libcurl_vendor/: CHANGELOG.rst  CMakeLists.txt  package.xml
resource_retriever/: CHANGELOG.rst  CMakeLists.txt  package.xml
resource_retriever/include/resource_retriever/: exception.hpp
resource_retriever/include/resource_retriever/plugins/: curl_retriever.hpp
resource_retriever/src/: retriever.cpp
resource_retriever/src/plugins/: curl_retriever.cpp  filesystem_retriever.cpp
resource_retriever/test/: test.cpp
ros2/libcurl_vendor/: package.xml
rpm/: ros-galactic-libcurl-vendor.spec  ros-humble-libcurl-vendor.spec  ros-humble-resource-retriever.spec  ros-iron-resource-retriever.spec  ros-jazzy-libcurl-vendor.spec  ros-jazzy-resource-retriever.spec  ros-kilted-libcurl-vendor.spec  ros-kilted-resource-retriever.spec  ros-rolling-libcurl-vendor.spec  ros-rolling-resource-retriever.spec  template.spec
src/plugins/: retriever_plugin.cpp
src/resource_retriever/: __init__.py
test/: test.py
