<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>libcurl_vendor</name>
  <version>2.0.0</version>
  <description>Vendored build of the curl http library.</description>
  <maintainer email="steven@openrobotics.org">Steven! Ragnarök</maintainer>
  <license>Apache License 2.0</license>

  <depend>curl</depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>


